--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<div id="one">
 					<div id="drow"><i class="ri-vip-diamond-fill"></i></div>
 					<div id="drtxt">
-						<h3>Koi heading hai</h3>
+						<h3>Daimond</h3>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo voluptate dolorem praesentium veniam soluta ipsa.</p>
 					</div>
 				</div>
@@ -51,7 +51,7 @@
 				<div id="one">
 					<div id="drow"><i class="ri-vip-diamond-fill"></i></div>
 					<div id="drtxt">
-						<h3>Koi heading hai</h3>
+						<h3>Rare Diamond</h3>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo voluptate dolorem praesentium veniam soluta ipsa.</p>
 					</div>
 				</div>
